Refactor code base: update classes and tests to use UUID identifiers
- Change all ID fields from String to UUID in classes
- Update getter/setter methods accordingly
- Ensure all model classes are compatible with new database schema