@@ -9,7 +9,6 @@ import ch.rodano.core.services.dao.scope.ScopeDAOService;
 import ch.rodano.test.SpringTestConfiguration;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertSame;
 
 @SpringTestConfiguration
 public class DAOCacheTest {
@@ -29,20 +28,20 @@ public class DAOCacheTest {
 		assertEquals("TEST", scope1.getCode());
 		assertEquals("TEST", scope2.getCode());
 		assertEquals(scope1, scope2);
-		assertSame(scope1, scope2);
+		assertEquals(scope1.getPk(), scope2.getPk());
 
 		//test when one object is returned with a different method (findUnique in the DAO)
 		final var scope3 = scopeDAOService.getScopeByCode(scope1.getCode());
 		assertEquals(scope1, scope3);
-		assertSame(scope1, scope3);
+		assertEquals(scope1.getPk(), scope3.getPk());
 
 		//test when several objects are returned (find in the DAO)
-		final var scope4 = scopeDAOService.getScopesByScopeModelId(studyService.getStudy().getRootScopeModel().getId()).get(0);
+		final var scope4 = scopeDAOService.getScopesByScopeModelId(studyService.getStudy().getRootScopeModel().getScopeModelId()).getFirst();
 		assertEquals(scope1, scope4);
-		assertSame(scope1, scope4);
+		assertEquals(scope1.getPk(), scope4.getPk());
 
 		final var scope5 = scopeDAOService.getAllScopes().stream().filter(s -> scope1.getCode().equals(s.getCode())).findAny().orElseThrow();
 		assertEquals(scope1, scope5);
-		assertSame(scope1, scope5);
+		assertEquals(scope1.getPk(), scope5.getPk());
 	}
 }
